# Vulkan_3d_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RenderDoc-example.cap  build.sh  justfile  meson.build  shaders_compile.sh
assets/shaders/: cube.frag  triangle.frag  triangle.vert
platform/linux/: linux.toolchain.cmake
platform/windows/: windows.toolchain.cmake
scripts/: clang-format.sh
src/: main.cpp  render_system.cpp  render_system.hpp  vulkan_app.cpp  vulkan_app.hpp
src/app/: render_system.cpp  render_system.hpp  vulkan_app.cpp  vulkan_app.hpp
src/core/: lve_object.hpp
src/engine/core/: lve_object.hpp
src/engine/graphics/vulkan/: vk_device.cpp  vk_device.hpp  vk_model.cpp  vk_model.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_swapchain.cpp  vk_swapchain.hpp
src/engine/platform/: lve_window.cpp  lve_window.hpp
src/engine/platform/input/: camera_controller.cpp  camera_controller.hpp  lve_input_keyboard.cpp  lve_input_keyboard.hpp
src/engine/renderer/: lve_camera.cpp  lve_camera.hpp  lve_renderer.cpp  lve_renderer.hpp
src/graphics/vulkan/: vk_device.cpp  vk_device.hpp  vk_model.cpp  vk_model.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_swapchain.cpp  vk_swapchain.hpp
src/platform/: lve_app_base.cpp  lve_app_base.hpp  lve_window.cpp  lve_window.hpp
src/renderer/: lve_renderer.cpp  lve_renderer.hpp
